Make them jump! jump! jump! Fixed the hover z-index bug

--- a/styles.css
+++ b/styles.css
@@ -111,7 +111,7 @@ li a:hover {
 }
 
 .targetArea{
-  /*outline: 2px solid red;*/
+  outline: 2px solid red;
     height: 100%;
     width: 50%;
     transform: translate(150px, -50px);
@@ -119,18 +119,19 @@ li a:hover {
 }
 
 .dancer-image {
-  transform: translateY(-500px);
+  transform: translate(-160px,-50px);
   pointer-events: none;
 }
 
 .carlton {
+  /*outline: 1px solid red;*/
   border:0;
   border-radius:0px;
   position:absolute;
 
-  width: 400px;
+  width: 150px;
   height: 400px;
-  /*pointer-events: none;*/
+  pointer-events: all;
 }
 
 .addDancerButton,
